# PyCpp-Auto-Driving

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  inference_demo.py  requirements.txt
.github/workflows/: ci.yml  cpp_build.yml
app/: main.py
app/templates/: index.html
src/cpp/: CMakeLists.txt  LaneKeepingInference.cpp  LaneKeepingInference.h  README_integration.md  bindings.cpp
